fix alignment

--- a/apps/dashr-manhattan-plot/assets/general-app-page.css
+++ b/apps/dashr-manhattan-plot/assets/general-app-page.css
@@ -128,7 +128,7 @@
     margin-right: 0px;
     font-size: 10pt;
     float: left;
-    background-color: #FFFAF1;           /* Change in individual app stylesheet */
+    background-color: #FFFFFF;           /* Change in individual app stylesheet */
     border-style: solid;
     border-width: 1px;
     border-color: #F2F2F2;
@@ -151,7 +151,7 @@
     font-size: 9pt;
     height: 50px;
     padding: 15px;
-    background-color: #FFFAF1;           /* Change in individual app stylesheet */
+    background-color: #FFFFFF;           /* Change in individual app stylesheet */
     border: solid 1px #D3D3D3;           /* Change in individual app stylesheet */
 }
 
@@ -168,7 +168,7 @@
     display: block;
     margin-top: 20px;
     margin-bottom: 40px;
-    background-color: #FFFAF1;
+    background-color: #FFFFFF;
 }
 .app-controls-name {
     display: inline-block;
@@ -178,6 +178,7 @@
     font-size: 12pt;
     margin-top: 5px;
     margin-bottom: 5px;
+    float: left;
 }
 .fullwidth-app-controls-name {
     display: inline-block;
